crates/maki-core/src/cst/snapshots/maki_core__cst__formatter_insta_tests__tests__format_extension_contains.snap
---
source: crates/maki-core/src/cst/formatter_insta_tests.rs
assertion_line: 54
expression: formatted
---
Profile: Test
Parent: Patient
