crates/maki-core/src/cst/snapshots/maki_core__cst__formatter_insta_tests__tests__format_no_alignment.snap
---
source: crates/maki-core/src/cst/formatter_insta_tests.rs
assertion_line: 102
expression: formatted
---
Profile: Test
Parent: Patient

*  1..* MS
*  1..1 MS
*  1..1
