crates/maki-core/src/cst/snapshots/maki_core__cst__formatter_insta_tests__tests__format_simple_profile.snap
---
source: crates/maki-core/src/cst/formatter_insta_tests.rs
expression: formatted
---
Profile: MyPatient
Parent: Patient
Id: my-patient
Title: "My Patient Profile"

* identifier  MS
* name        MS
* gender
