crates/maki-core/src/cst/snapshots/maki_core__cst__formatter_insta_tests__tests__format_valueset_binding.snap
---
source: crates/maki-core/src/cst/formatter_insta_tests.rs
expression: formatted
---
Profile:Test
Parent:Patient

*gender from GenderValueSet (required)
*communication.language from AllLanguages (extensible)
