crates/maki-core/src/cst/snapshots/maki_core__cst__formatter_insta_tests__tests__format_with_caret_rules.snap
---
source: crates/maki-core/src/cst/formatter_insta_tests.rs
expression: formatted
---
Profile: Test
Parent: Patient

* ^version = ""1.0.0""
* ^status = "#active"
* name     1..1
